# byu-pathway-matomo

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml  functions.yaml
db/: bigquery.py
matomo/: matomo_repo.py  matomo_service.py  test_matomo_service.py
matomo/pipeline/: __init__.py  goals.py  interface.py  marketing_campaign_source.py
