[tool.poetry]
name = "byu-pathway-matomo"
version = "1.1"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^3.5.0"
httpx = "^0.23.3"
compose = "^1.4.8"
google-auth = "^2.16.0"
google-cloud-tasks = "^2.12.1"
dateparser = "^1.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.0"
types-dateparser = "^1.1.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
